# RPi-Fan-PID-Controller

./: .gitignore  CMakeLists.txt  config.h  fan-control.c
